[tool.poetry]
name = "risk-greeks-taipy"
version = "0.1.0"
description = ""
authors = ["miletocarmelo <carmelo.mileto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "1.26.4"
yfinance = "^0.2.44"
reflex = "^0.6.1"
plotly = "^5.24.1"
scipy = "^1.14.1"
optionlab = "^1.3.1"
gunicorn = "^23.0.0"
taipy = "4.0.0"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
